crates/analyzer/tests/snapshots/errors__overflow_u8_assignment.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: literal out of range for `u8`
  ┌─ [snippet]:3:15
  │
3 │   let x: u8 = 260
  │               ^^^ does not fit into type `u8`


